# py-flask

./: .gitignore  config.py  manage.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  decorators.py  errors.py  logger.py  models.py  routes.py
app/api/: controllers.py  routes.py  services.py
app/main/: __init__.py  routes.py
app/models/: user.py
app/schemas/: user_schema.py
app/services/: auth_service.py  user_service.py
app/templates/: base.html  index.html
instance/: app.db
migrations/versions/: c57d470c9eed_initial_migration.py
static/: swagger.json
tests/: conftest.py  test_basic.py  test_user_views.py
