[tool.project]
name = "py-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "tangjiacheng",email = "donquixote1110@outlook.com"}
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.15.2"
aniso8601 = "^10.0.1"
blinker = "^1.9.0"
click = "^8.2.0"
Flask = "^3.1.1"
Flask-JWT-Extended = "^4.7.1"
Flask-Migrate = "^4.1.0"
Flask-RESTful = "^0.3.10"
Flask-SQLAlchemy = "^3.1.1"
flask-swagger-ui = "^5.21.0"
gunicorn = {version = "^23.0.0", optional = true}  # 生产环境可选
itsdangerous = "^2.2.0"
Jinja2 = "^3.1.6"
Mako = "^1.3.10"
MarkupSafe = "^3.0.2"
marshmallow = "^4.0.0"
packaging = "^25.0"
PyJWT = "^2.10.1"
python-dotenv = "^1.1.0"
pytz = "^2025.2"
six = "^1.17.0"
SQLAlchemy = "^2.0.41"
typing_extensions = "^4.13.2"
Werkzeug = "^3.1.3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
iniconfig = "^2.1.0"
pluggy = "^1.5.0"
pytest = "^8.3.5"
pytest-flask = "^1.3.0"

[tool.poetry.extras]
server = ["gunicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=html"
testpaths = ["tests"]
